<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.xj.dms.common.SlideShowView
        android:id="@+id/slideshowView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/slideshowView"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/menu_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_task_query"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/menu_task_query"
                android:gravity="center"
                android:text="@string/task_query" />

            <TextView
                android:id="@+id/tv_task_approval"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/menu_task_approval"
                android:gravity="center"
                android:text="@string/task_approval" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_task_statistical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/menu_task_statistical"
                android:gravity="center"
                android:text="@string/task_statistical" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/menu_more"
                android:gravity="center" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/slideshowView"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/iv_count"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/mini_red_dot" />

        <TextView
            android:id="@+id/tv_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>