<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:background="@drawable/approval_dialog_bg"
    android:orientation="vertical">
    
    <RelativeLayout
        android:id="@+id/rellayout1" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:src="@drawable/btn_close" />
    
    </RelativeLayout>
    
    <EditText
        android:id="@+id/et_rejectedOpinion" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="top"
        android:paddingLeft="5dp"
        android:minLines="3"
        android:hint="请输入驳回意见"
        android:textColor="#909090"
        android:textSize="16sp"
        android:background="@drawable/search_bg_n"
        android:visibility="gone"/>
    
    <LinearLayout
        android:id="@+id/linlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/btn_confirm"
            android:gravity="center"
            android:text="@string/agree"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1.5"
            android:background="@drawable/btn_cancel"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip" >
        
        <Button
            android:id="@+id/btn_agree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_btn_agree"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/agree"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_rejected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_btn_rejected"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/rejected"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
    
</LinearLayout>