<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg_color"
    android:orientation="vertical"
    tools:context="com.xj.dms.view.login.LoginActivity" >

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="80dp" >

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_bg"
            android:orientation="vertical" >
        </LinearLayout>

        <com.xj.dms.common.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/def_icon" >
        </com.xj.dms.common.CircleImageView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_login_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_login"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#E5E6E6"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp" >

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:text="@string/username"
                android:textColor="@color/tv_text_color"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_user_name"
                android:background="@null"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/tv_text_color" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#c0c0c0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp" >

            <TextView
                android:id="@+id/tv_user_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:text="密    码："
                android:textColor="@color/tv_text_color"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:layout_toRightOf="@id/tv_user_password"
                android:background="@null"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="@color/tv_text_color" />

            <ImageButton
                android:id="@+id/ib_hidden_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/hidden_pass"
                android:clickable="true" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_rember_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_login_edit"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <com.xj.dms.common.CustomSwitch 
            android:id="@+id/swicth_rember_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/remerber_usernameAndpwd"
            android:textColor="@color/tv_back_color"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/ll_rember_pwd"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/login_btn_bg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/login_my_workdesk"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="30dp"
        android:clickable="true"
        android:drawableLeft="@drawable/goback"
        android:drawablePadding="5dp"
        android:gravity="bottom"
        android:text="@string/back"
        android:textColor="@color/tv_back_color"
        android:textSize="18sp" />

</RelativeLayout>